--- a/EPAM.Summer.Day10-11.Zheldak/Matrix.Test/Matrix.Test.csproj
+++ b/EPAM.Summer.Day10-11.Zheldak/Matrix.Test/Matrix.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8AC0B4B1-AD2D-497C-9933-5A5F945A1E33}</ProjectGuid>
+    <ProjectGuid>{35AAC6A6-D918-4836-836C-FDC9970613B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Task5</RootNamespace>
-    <AssemblyName>Task5</AssemblyName>
+    <RootNamespace>Matrix.Test</RootNamespace>
+    <AssemblyName>Matrix.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,13 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChangeEventArgs.cs" />
-    <Compile Include="DiagonalMatrix.cs" />
-    <Compile Include="ExtentionArray.cs" />
-    <Compile Include="MatrixBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SemmetricMatrix.cs" />
-    <Compile Include="SquareMatrix.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
